@@ -1,4 +1,10 @@
-xx Mar 2006: 0.2.6 Miek <miek@miek.nl>
+   Apr 2006: 0.2.7 Miek <miek@miek.nl>
+   -- bugfixes --
+   * re-touch the timestamp file at the end. This way an interupted
+   backup can be re-run because all the rdup files still untouched.
+   
+
+30 Mar 2006: 0.2.6 Miek <miek@miek.nl>
    -- script updates and bugfixes --
    * more signal handling was added to the shell scripts, 
      they now echo what file they were processing when 
